--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,69 @@
+# Dependencies
 node_modules/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Deployment files (optional - you might want to keep these)
+# *-commands.txt
+# auth-and-deploy.txt
+# deploy-commands.txt
+# fixed-deploy-commands.txt
+# gcp-deploy-commands.txt
+# redeploy-commands.txt
+
+# Docker (optional)
+# Dockerfile
+# docker-compose.yml
+
+# Temporary files
+*.tmp
+*.temp
