--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,11 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ env.PROJECT_ID }}
 
-      - name: Configure Docker
-        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev
+      - name: Configure Docker for Artifact Registry
+        run: |
+          echo '${{ secrets.GCP_SA_KEY }}' | base64 -d > /tmp/gcp-key.json
+          gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
+          gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
 
       - name: Build and Push Container
         run: |-
@@ -39,3 +42,6 @@ jobs:
             --allow-unauthenticated \
             --memory 512Mi \
             --cpu 1
+
+      - name: Cleanup
+        run: rm -f /tmp/gcp-key.json
